2006-01-03  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/surface.cc: added missing implementations for reference() and
	unreference() functions

0.4.0:

2005-12-17  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/Makefile.am:
	* cairomm/refptr.h: Add shared 
	reference-counting smartpointer, using 
	the reference-count in the object. A copy 
	of the tried and tested glibmm RefPtr.
	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/pattern.cc:
	* cairomm/pattern.h:
	* cairomm/surface.cc:
	* cairomm/surface.h: Make constructors protected 
	and add public static create() methods that return 
	instances in RefPtr<>s. This allows reference-counted 
	objects to be clearly const or non-const, and allows 
	casting between related types.

2005-12-17  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: Change set_dash(void) to 
	unset_dash(). Change rotate_deg() to 
	rotate_degrees(). Change identity_matrix() to 
	set_identity_matrix(). Change new_path() to 
	clear_path().
	* cairomm/fontface.cc:
	* cairomm/fontface.h: Comment-out 
	get/set_user_data(), because it seems useless.

0.3.0:

2005-12-08  Murray Cumming <murrayc@murrayc.com>

	* cairomm/pattern.cc:
	* cairomm/pattern.h: Create a hierarchy of pattern 
	classes, as suggested by the C documentation, because 
	not all functions are meaningful for all pattern types.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: font_extents(), stroke_extents(), 
	glyph_extents(), fill_extents(): Add get_ prefix and 	
	make them const.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: Add typedef for Matrix, though we 
	probably want to derive a class with a C++-like matrix 
	API, with operator overloading.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/exception.cc:
	* cairomm/exception.h: Rename to logic_error, because 