@@ -1,3 +1,3 @@
-SUBDIRS = 
+SUBDIRS = png_file
 
 EXTRA_DIST = README Makefile.am_fragment
