@@ -1,0 +1,5 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+# build the executable but don't install it
+noinst_PROGRAMS = example_png_file
+example_png_file_SOURCES = main.cc
